packages/beff-core/tests/snapshots/frontend_v2__tests__export_multi_variable_decl.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export const A = \"a\" as const, B = \"b\" as const;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A, B } from \"./t\";\n                    type X = typeof A;\n                    type Y = typeof B;\n                    parse.buildParsers<{ X: X, Y: Y }>();\n                \"#)])"
---
type X = "a";

type Y = "b";


type BuiltParsers = {
  X: X,
  Y: Y,
}
