packages/beff-core/tests/snapshots/frontend_v2__tests__export_multi_variable_ts_decl.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export declare const A: \"a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A } from \"./t\";\n                    type X = typeof A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
}
