packages/beff-core/tests/snapshots/frontend_v2__tests__export_namespace_as_default.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export * as default from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import N from \"./b\";\n                    type X = typeof N.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
}
