packages/beff-core/tests/snapshots/frontend_v2__tests__export_star_aggregation.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export type A = \"a\";\n                \"#,),\n(\"b.ts\", r#\"\n                    export type B = \"b\";\n                \"#,),\n(\"all.ts\",\nr#\"\n                    export * from \"./a\";\n                    export * from \"./b\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A, B } from \"./all\";\n                    type X = A;\n                    type Y = B;\n                    parse.buildParsers<{ X: X, Y: Y }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
  Y: "b",
}
