packages/beff-core/tests/snapshots/frontend_v2__tests__export_star_conflict.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export const X = \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export const X = \"b\" as const;\n                \"#,),\n(\"all.ts\",\nr#\"\n                    export * from \"./a\";\n                    export * from \"./b\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { X } from \"./all\";\n                    type T = typeof X;\n                    parse.buildParsers<{ T: T }>();\n                \"#)])"
---
type entry_ts__T = "a";


type BuiltParsers = {
  T: entry_ts__T,
}
