packages/beff-core/tests/snapshots/frontend_v2__tests__export_type_only.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export type T = string;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export type { T } from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { T } from \"./b\";\n                    type X = T;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: string,
}
