packages/beff-core/tests/snapshots/frontend_v2__tests__generic_type.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: print_types(from)
---
type X = { "a": string };


type BuiltParsers = {
  X: X,
}
