packages/beff-core/tests/snapshots/frontend_v2__tests__import_default_as_named.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export default \"a\" as const;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { default as A } from \"./t\";\n                    type X = typeof A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
}
