packages/beff-core/tests/snapshots/frontend_v2__tests__import_inline_type.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export type T = string;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { type T } from \"./t\";\n                    type X = T;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type entry_ts__X = t_ts__T;

type t_ts__T = string;


type BuiltParsers = {
  X: entry_ts__X,
}
